# job-sourcing-pro

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  create_tables.py  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt  setup_db.sh  test_db.py
attached_assets/: Pasted-Product-Requirement-Document-PRD-Job-Sourcing-Filtering-Web-App-1-Objectives-The-goal-of-th-1742795760754.txt
init-scripts/: 01-init.sql
src/database/: crud.py  models.py
src/scheduler/: __init__.py  job_scheduler.py
src/scraper/: upwork_scraper.py
src/ui/: dashboard.py  filters.py  job_listing.py
src/utils/: config.py  data_processor.py
