[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.20.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "scrapegraphai>=1.43.1",
    "sqlalchemy>=2.0.39",
    "streamlit>=1.43.2",
    "trafilatura>=2.0.0",
]
